pqraaa-support/glas2/glas2/perf_test/openmp/matvec/notrans/double/blas_log.txt
blas.cpp:8:10: fatal error: 'omp.h' file not found
#include <omp.h>
         ^
1 error generated.
make: *** [blas.o] Error 1
